deploy/base/redis/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: sidecar
        - podSelector:
            matchLabels:
              app: reconciler
      ports:
        - protocol: TCP
          port: 6379
  egress: []
